--- a/src/explore.ipynb
+++ b/src/explore.ipynb
@@ -886,8 +886,8 @@
                 "Comparación directa con el modelo simple\n",
                 "Métrica\tÁrbol Simple\tÁrbol Complejo\n",
                 "Precisión global\t0.76\t0.59\n",
-                "Recall Clase 1\t0.33\t0.55 ✅\n",
-                "Recall Clase 0\t0.95\t0.60 ❌\n",
+                "Recall Clase 1\t0.33\t0.55 \n",
+                "Recall Clase 0\t0.95\t0.60 \n",
                 "Falsos negativos\tMuy alto en complejo (mejoró clase 1)\n",
                 "Falsos positivos\tAumentaron en clase 0"
             ]
